# Accounting-Project

./: CMakeLists.txt  README.md  main.c
db/: accounts.txt  importantUsers.txt  log.txt  transactions.txt  users.txt
documentation/: documentation.md  models.md
libs/accounts/: accounts.c  accounts.h
libs/activityLog/: activityLog.c  activityLog.h
libs/dbInteraction/accounts/: accounts.c
libs/dbInteraction/users/: users.c  users.h
libs/dbOperations/: dbOperations.c  dbOperations.h
libs/importantUsers/: importantUsers.c  importantUsers.h
libs/misc/: misc.c  misc.h
libs/models/: models.h
libs/obtainData/: obtainData.c  obtainData.h
libs/reports/: reports.c  reports.h
libs/transactions/: transaction.c  transactions.c  transactions.h
libs/users/: users.c  users.h
libs/validation/: validation.c  validation.h
utils/: utils.c  utils.h
